--- a/source/_posts/共产党宣言.md
+++ b/source/_posts/共产党宣言.md
@@ -4,6 +4,7 @@ date: 2018-02-21 14:25:00
 categories: none
 tags: []
 urlname: the-communist-manifesto
+outdated: false
 ---
 {% cplayer %}
 - 5281551
