--- a/source/_posts/著名物理学家史蒂芬·威廉·霍金去世 享年76岁.md
+++ b/source/_posts/著名物理学家史蒂芬·威廉·霍金去世 享年76岁.md
@@ -4,6 +4,7 @@ date: 2018-03-14 04:46:00
 categories: none
 tags: []
 urlname: stephen-hawking-obituary
+outdated: false
 ---
 著名物理学家史蒂芬·霍金今日(2018.03.14)去世，享年76岁。
 
