--- a/source/_posts/雄关漫道真如铁，而今迈步从头越.md
+++ b/source/_posts/雄关漫道真如铁，而今迈步从头越.md
@@ -4,6 +4,7 @@ date: 2017-12-26 12:48:00
 categories: none
 tags: []
 urlname: Mao
+outdated: false
 ---
 ![Mao_0](https://img.imjad.cn/images/2017/12/26/v2-c3a797957d036858844c87935ab4cda8.jpg)
 ![Mao_1](https://img.imjad.cn/images/2017/12/26/v2-4e96d1f6966db641212bada703054f4a.jpg)
